## Process this file with automake to produce Makefile.in

MAINTAINERCLEANFILES = \
	configure \
	Makefile.in \
	depcomp \
	config.h.in \
	missing \
	aclocal.m4 \
	install-sh

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = crurom

crurom_SOURCES = \
	crurom.c

crurom_LDFLAGS = 

crurom_LDADD = 


